package com.example.newsfeeder.presentation.ui

object TestTags {
    const val SOURCE_CLICK_TEST_TAG = "sourceTab"
    const val BOOKMARK_TEST_TAG = "bookmarkClick"
    const val NEWS_FEED_TEST_TAG = "eyeClick"

}