<resources>
    <string name="app_name">News Feeder</string>
    <string name="all_feeds">All feeds</string>
    <string name="all_groups">All groups</string>
    <string name="saved">Saved</string>
    <string name="by_aimee_green_the_oregonian_live">By Aimee Green / The oregonian/Live</string>
    <string name="yesterday">Yesterday</string>
    <string name="dummy_text">Механізми аутентифікації в інтерфейсах користувачів</string>
    <string name="contrary_to_popular_belief_lorem_ipsum_is_not_simply_random_text_it_has_roots_in_a_piece_of_classical_latin_literature_from_45_bc_making_it_over_2000_years_old">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.

...
